fixing up layout issues

--- a/src/Layout/NavBar/NavBar.css
+++ b/src/Layout/NavBar/NavBar.css
@@ -1,5 +1,5 @@
 .chbi-navbar-container {
-  height: 100vh;
+  height: 1080px;
   width: 20vw;
   margin-top: 0;
   background-color: #007C91;
